added and commented out functionality to expose the Lambda Handler for the Send-Email functionality as an API Endpoint through AWS API Gateway. Uncomment it if you want to use it. Be aware apiKeys can have name collisions, so give them unique names if you plan to use several

--- a/serverless.yml
+++ b/serverless.yml
@@ -10,11 +10,11 @@ provider:
   versionFunctions: true
   memorySize: 1024
   timeout: 10
-  logs:
-    restApi: true
-  apiKeys:
-    - admin_key
-    - testing_key
+  # logs:
+  #   restApi: true
+  # apiKeys:
+  #   - admin_key
+  #   - testing_key
   tags:
     deployment: serverless.com
 
@@ -34,4 +34,9 @@ provider:
 functions:
   send-email:
     handler: send_email_handler.lambda_handler
+    # events:
+    #   - http:
+    #       path: /send_email
+    #       method: get
+    #       private: true
 
